# wasm-repo

./: .gitignore  Cargo.toml  README.md  cp-wasm.sh  taho_customer.wasm  taho_inventory.wasm  taho_order.wasm
models/c/: lib  lib.c  model.wasm  sdk.c  sdk.h
models/js/: README.md  package-lock.json  package.json  rspack.config.js  webpack.config.js  wit.d.ts
models/js/src/: model.mjs
models/js/src/interfaces/: taho-models-crud.d.ts  taho-models-model-data.d.ts  taho-models-model.d.ts  taho-models-port.d.ts  taho-models-subscriber.d.ts
models/rs/: model.rs
models/rs/customer/: Cargo.toml
models/rs/customer/src/: customer.rs  lib.rs
models/rs/inventory/: Cargo.toml
models/rs/inventory/src/: inventory.rs  lib.rs
models/rs/order/: Cargo.toml
models/rs/order/src/: bindings.rs  lib.rs  order.rs
models/rs/shipping/: Cargo.toml  build.rs
models/rs/shipping/src/: lib.rs  ship.rs
models/wit/: adapter.wit  adapters-inbound.wit  adapters-outbound.wit  crud.wit  datasource.wit  datasources.wit  llm.wit  message.wit  model.wit  port.wit  ports.wit  queries.wit  workflow.wit  world.wit
taho-macro/: Cargo.toml
taho-macro/src/: lib.rs
