[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.metadata.crane]
name = "taho-model"

[workspace]
members = ["models/rs/order", "models/rs/inventory", "models/rs/customer"]
resolver = "2"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[workspace.dependencies]
taho-macro = { path = "taho-macro" }
